# Cpp-Standard-Template-Library

./: .gitignore  CMakeLists.txt  README.md
Algorithms/: BinarySearch.cpp  FindFunction.cpp  MoneyChangeProblem.cpp  NextPermutation.cpp  PairClass.cpp  SomeHandlyFunctions.cpp  Sort.cpp
Generic/: Compartor.cpp  GenericFunction.cpp  Iterators.cpp
Vector/: Intro.cpp  VectorFunctions.cpp
